--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 <link rel="stylesheet" href="ui-kit/ui-kit-header/css/style.css">
 <!-- content -->
 <link rel="stylesheet" href="ui-kit/ui-kit-content/css/style.css">
-<!-- blog -->
+<!-- blog --
 <link rel="stylesheet" href="ui-kit/ui-kit-blog/css/style.css">
-<!-- contacts -->
+<!-- contacts --
 <link rel="stylesheet" href="ui-kit/ui-kit-contacts/css/style.css">
-<!-- crew -->
+<!-- crew --
 <link rel="stylesheet" href="ui-kit/ui-kit-crew/css/style.css">
-<!-- price -->
+<!-- price --
 <link rel="stylesheet" href="ui-kit/ui-kit-price/css/style.css">
-<!-- projects -->
+<!-- projects --
 <link rel="stylesheet" href="ui-kit/ui-kit-projects/css/style.css">
-<!-- footer -->
+<!-- footer --
 <link rel="stylesheet" href="ui-kit/ui-kit-footer/css/style.css">
-
+-->
 <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-
+<div class="page-wrapper">
 <header class="header-3"> <!--used in sample-6-->
     <div class="container">
         <div class="row">
@@ -103,7 +103,7 @@
     </div>
 </section>
 
-
+</div>
 
 
 
