fonts and next page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<!--DOCTYPE html -->
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Molecular Match</title>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <link rel="shortcut icon" href="flat-ui/images/favicon.ico">
+        
+
 <script type="text/javascript" src="//use.typekit.net/uei3smh.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300' rel='stylesheet' type='text/css'>
@@ -84,20 +92,49 @@
                     <div class="col-sm-offset-1">
                         <div class="screen-wrapper">
                             <div class="screen">
-                                <img src="img/app-2.png" alt="">
                                 <img src="img/app-1.png" alt="">
+                                <img src="img/app-2.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="col-sm-offset-2">
-                        <h6>Responsive Layout</h6>
-                        Of course we haven’t forgotten about the responsive layout. Full mobile support.
-                        <h6>Retina Ready</h6>
-                        Startup Framework works fine on devices supporting Retina Display. Feel the clarity!
+                        <h6>Patients</h6>
+                        Sample text 1.
+                        <h6>Database</h6>
+                        Sample text 2.
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="content-26 bg-mm">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <h3>The Second Sneak-Peek of Startup Framework</h3>
+                <p class="lead">We’ve created the product that will help your
+                    startup to look even better.</p>
+            </div>
+        </div>
+        <div class="row features">
+            <div class="col-sm-3">
+                <img src="../../common-files/icons/Chat@2x.png" alt="" width="100" height="100">
+                <h6>Based on Bootstrap</h6>
+                HTML layout is based on one of the common frameworks.
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <img src="../../common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
+                <h6>HTML 5, Less, CSS 3</h6>
+                We used checked-out technologies to give the best results.
+            </div>
+            <div class="col-sm-3 col-sm-offset-1">
+                <img src="../../common-files/icons/ps@2x.png" alt="" width="78" height="100">
+                <h6>Block Mode</h6>
+                You can easily combine any blocks in a variety of design projects.
             </div>
         </div>
     </div>
