--- a/index.html
+++ b/index.html
@@ -114,27 +114,26 @@
 <section class="content-26 bg-mm">
     <div class="container">
         <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <h3>The Second Sneak-Peek of Startup Framework</h3>
-                <p class="lead">We’ve created the product that will help your
-                    startup to look even better.</p>
+            <div class="col-sm-10 col-sm-offset-1">
+                <h3>Find your match.</h3>
+                <p class="lead">Personalized medicine provides patients with the best therapeutic approach based on their individual genetic makeup, resulting in:</p>
             </div>
         </div>
         <div class="row features">
             <div class="col-sm-3">
-                <img src="../../common-files/icons/Chat@2x.png" alt="" width="100" height="100">
-                <h6>Based on Bootstrap</h6>
-                HTML layout is based on one of the common frameworks.
+                <img src="common-files/icons/Chat@2x.png" alt="" width="100" height="100">
+                <h6>Better Outcomes</h6>
+                Sample text 1.
             </div>
             <div class="col-sm-4 col-sm-offset-1">
-                <img src="../../common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
-                <h6>HTML 5, Less, CSS 3</h6>
-                We used checked-out technologies to give the best results.
+                <img src="common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
+                <h6>Better Drugs</h6>
+                Sample text 2.
             </div>
             <div class="col-sm-3 col-sm-offset-1">
-                <img src="../../common-files/icons/ps@2x.png" alt="" width="78" height="100">
-                <h6>Block Mode</h6>
-                You can easily combine any blocks in a variety of design projects.
+                <img src="common-files/icons/ps@2x.png" alt="" width="78" height="100">
+                <h6>Lower Costs</h6>
+                Sample text 3.
             </div>
         </div>
     </div>
