lots of things, trying to get rid of left animaion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script type="text/javascript" src="//use.typekit.net/uei3smh.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:300,700' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" href="flat-ui/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="flat-ui/css/flat-ui.css">
@@ -19,6 +19,8 @@
 <link rel="stylesheet" href="common-files/css/icon-font.css">
 <!-- end -->
 <link rel="stylesheet" href="common-files/css/animations.css">
+
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 <!-- TODO: compile into single style -->
 <!-- header -->
@@ -71,8 +73,7 @@
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
                 <h2 id="responsive_headline">The <mm-green>Right</mm-green> Drug for the <mm-green>Right</mm-green> Patient</h2>
-                <p>Matching you with the best treatment.</p>
-                <p><a class="btn btn-primary btn-mm btn-lg text-center">Learn More</a></p>
+                <p><a class="btn btn-primary btn-mm btn-lg text-center">Find your match.</a></p>
             </div>
         </div>
     </div>
@@ -98,14 +99,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="col-sm-offset-2">
-                        <h6>Patients</h6>
-                        Sample text 1.
-                        <h6>Database</h6>
-                        Sample text 2.
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -114,27 +107,63 @@
 <section class="content-26 bg-mm">
     <div class="container">
         <div class="row">
-            <div class="col-sm-10 col-sm-offset-1">
+            <div class="col-sm-8 col-sm-offset-2">
                 <h3>Find your match.</h3>
                 <p class="lead">Personalized medicine provides patients with the best therapeutic approach based on their individual genetic makeup, resulting in:</p>
             </div>
         </div>
         <div class="row features">
-            <div class="col-sm-3">
-                <img src="common-files/icons/Chat@2x.png" alt="" width="100" height="100">
+            <div class="col-sm-4">
+                <img src="img/icon-2.png" alt="" width="100" height="100">
+                <h6>Targeted Medicine</h6>
+            </div>
+            <div class="col-sm-4">
+                <img src="img/icon-1.png" alt="" width="100" height="100">
                 <h6>Better Outcomes</h6>
-                Sample text 1.
+            </div>
+            <div class="col-sm-4">
+                <img src="img/icon-3.png" alt="" width="100" height="100">
+                <h6>Lower Costs</h6>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="content-5">
+    <div class="container">
+        <img src="img/platform.png" width="400" height="200" alt="">
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1">
+                <p class="lead text-center">Treatment for you.</p>
+            </div>
+        </div>
+        <div class="row features">
+            <div class="col-sm-4 col-sm-offset-2">
+                <i class="fa fa-search"></i></span>
+                <h6>Clinical Trial Selector</h6>
+                <ul>Search clinical trial databases with our easy-to-use interface.</ul>
+                <ul>Proprietary ranking algorithm selects best trial for you.</ul>
             </div>
             <div class="col-sm-4 col-sm-offset-1">
-                <img src="common-files/icons/Responsive1@2x.png" alt="" width="100" height="100">
-                <h6>Better Drugs</h6>
-                Sample text 2.
+                <span class="fui-folder"> </span>
+                <h6>Mutation Portal</h6>
+                <ul>Curated data on your disease or mutation.
+</ul>
+                <ul>Available genetic tests and FDA approved drugs.</ul>
+
             </div>
-            <div class="col-sm-3 col-sm-offset-1">
-                <img src="common-files/icons/ps@2x.png" alt="" width="78" height="100">
-                <h6>Lower Costs</h6>
-                Sample text 3.
-            </div>
+        </div>
+        <div class="row features">
+            <div class="col-sm-4 col-sm-offset-2">
+                <i class="fa fa-medkit"></i>
+                <h6>Knowledgable Network</h6>
+                <ul>Users consist of both patients and physicians.</ul>           
+                </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <i class="fa fa-comments"></i>
+                <h6>User Reviews</h6>
+                <ul>Find out what other patients thought about your treatment options.</ul>
+             </div>
         </div>
     </div>
 </section>
