might be working

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <div>
         <div class="container">
             <div class="row v-center">
-                <div class="col-sm-3">
+                <div class="col-sm-3 col-sm-offset-1">
                     <div>
-                        MolecularMatch is making personalized medicine a reality with a web-based platform that uses your own genetic sequencing data to find the <mm-green>best treatment for you.</mm-green>
+                        Molecular Match is making personalized medicine a reality with a web-based platform that uses your own genetic sequencing data to find the <mm-green>best treatment for you.</mm-green>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -134,7 +134,7 @@
         <img src="img/platform.png" width="400" height="200" alt="">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
-                <p class="lead text-center">Treatment for you.</p>
+                <p class="lead text-center">Finding the right treatment for <em>you</em>.</p>
             </div>
         </div>
         <div class="row features">
