latest bootstrap css/js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Molecular Match</title>
+        <meta name="description" content="The right drug for the right patient.">
+<meta name="keywords" content="cancer, clinical trial, personalized medicine, patient empowerment, medicine reviews">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -13,7 +15,7 @@
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <link href='http://fonts.googleapis.com/css?family=Raleway:300,700' rel='stylesheet' type='text/css'>
 
-<link rel="stylesheet" href="flat-ui/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="flat-ui/css/flat-ui.css">
 <!-- Using only with Flat-UI (free)-->
 <link rel="stylesheet" href="common-files/css/icon-font.css">
@@ -70,7 +72,7 @@
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
                 <h2 id="responsive_headline">The <mm-green>Right</mm-green> Drug for the <mm-green>Right</mm-green> Patient</h2>
-                <p><a class="btn btn-primary btn-mm btn-lg text-center">Find your match.</a></p>
+                <p><a href="#platform" class="btn btn-primary btn-mm btn-lg text-center">Learn More</a></p>
             </div>
         </div>
     </div>
@@ -155,7 +157,7 @@
             <div class="col-sm-4 col-sm-offset-2">
                 <i class="fa fa-medkit mm-green"></i>
                 <h6>Knowledgable Network</h6>
-                <ul>Users consist of both patients and physicians.</ul>           
+                <ul>Users include both patients and physicians.</ul>           
                 </div>
             <div class="col-sm-4 col-sm-offset-1">
                 <i class="fa fa-comments mm-green"></i>
@@ -195,7 +197,7 @@
 
 <!-- TODO: minimize this -->
 <script src="common-files/js/jquery-1.10.2.min.js"></script>
-<script src="flat-ui/js/bootstrap.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
 <script src="common-files/js/modernizr.custom.js"></script>
 <script src="common-files/js/page-transitions.js"></script>
