--- a/index.html
+++ b/index.html
@@ -24,23 +24,7 @@
 
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
-<!-- TODO: compile into single style -->
-<!-- header -->
-<link rel="stylesheet" href="ui-kit/ui-kit-header/css/style.css">
-<!-- content -->
-<link rel="stylesheet" href="ui-kit/ui-kit-content/css/style.css">
-<!-- blog --
-<link rel="stylesheet" href="ui-kit/ui-kit-blog/css/style.css">
-<!-- contacts --
-<link rel="stylesheet" href="ui-kit/ui-kit-contacts/css/style.css">
-<!-- crew --
-<link rel="stylesheet" href="ui-kit/ui-kit-crew/css/style.css">
-<!-- price --
-<link rel="stylesheet" href="ui-kit/ui-kit-price/css/style.css">
-<!-- projects --
-<link rel="stylesheet" href="ui-kit/ui-kit-projects/css/style.css">
-<!-- footer -->
-<link rel="stylesheet" href="ui-kit/ui-kit-footer/css/style.css">
+<link rel="stylesheet" href="css/base.css">
 <link rel="stylesheet" href="css/style.css">
 
 </head>
