--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
             <div class="col-sm-4 box">
                 <h6>Contact Us:</h6>
-                <p><a href="mailto:info@melocularmatch.com">info@molecularmatch.com</a>
+                <p><a href="mailto:info@molecularmatch.com">info@molecularmatch.com</a>
                 </p>
             </div>
         </div>
