--- a/changelog.html
+++ b/changelog.html
@@ -112,7 +112,6 @@
 					<li><dt class="icon n"></dt>New</li>
 					<li><dt class="icon f"></dt>Fix</li>
 					<li><dt class="icon e"></dt>Enhance</li>
-					<li><dt class="icon t"></dt>Todo</li>
 				</ul>
 			</div>
 		</div>
@@ -127,15 +126,16 @@
 			<!--- 1.1 ---->
 		<li class="">
 				<div class="cont w620">
-					<h2>Version 1.1 - Landing Page <span> (In Progress)</span></h2>
+					<h2>Version 1.1 <span> (In Progress)</span></h2>
 					<ul>
-						<li><dt class="icon t">T</dt>Accent color</li>
-						<li><dt class="icon t">T</dt>Hi-resolution<strong> vector</strong> icons and logos</li>
-						<li><dt class="icon t">T</dt>Purchase <strong>final</strong> icons and stock photos</li>
-						<li><dt class="icon t">T</dt><strong>Team</strong> page</li>
-						<li><dt class="icon t">T</dt><strong>Learn</strong> page with Youtube video and detailed description</li>
-						<li><dt class="icon t">T</dt><strong>Dynamic</strong> news feed and/or event calendar</li>
-						<li><dt class="icon t">T</dt>Mailing list <strong>subscription</strong> form</li>
+						<li><dt class="icon e">E</dt>Accent color</li>
+						<li><dt class="icon e">E</dt>Hi-resolution<strong> vector</strong> icons and logos</li>
+						<li><dt class="icon e">E</dt>Purchase <strong>final</strong> icons and stock photos</li>
+						<li><dt class="icon f">F</dt><strong>Update</strong> with content from MM</li>
+						<li><dt class="icon n">N</dt><strong>Team</strong> page</li>
+						<li><dt class="icon n">N</dt><strong>Learn</strong> page with Youtube video and detailed description</li>
+						<li><dt class="icon n">N</dt><strong>Dynamic</strong> news feed and/or event calendar</li>
+						<li><dt class="icon n">N</dt>Mailing list <strong>subscription</strong> form</li>
 					</ul>
 				</div>
 			</li>
